# OOP_hw7.2

./: CMakeLists.txt  SimpleWatch.cpp  SimpleWatch.hpp  Time.cpp  Time.hpp  Watch.cpp  Watch.hpp  main  main.cpp
